--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Lato:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -11,23 +11,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(#29251c, #2c2306);
   color: #d9e2f1;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
-#main-header {
+.main-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 3rem 10%;
 }
 
-#main-header #title {
+.main-header .title {
   display: flex;
   gap: 1rem;
   align-items: center;
 }
 
-#main-header #title img {
+.main-header .title img {
   width: 4rem;
   height: 4rem;
   object-fit: contain;
@@ -35,9 +35,10 @@ body {
   border: 2px solid #ffc404;
 }
 
-#main-header button {
+.main-header button {
   font-size: 1.5rem;
   font-family: 'Lato', sans-serif;
+  cursor: pointer;
 }
 
 h1 {
@@ -50,7 +51,7 @@ h1 {
   text-transform: uppercase;
 }
 
-#meals {
+.meals {
   width: 90%;
   max-width: 70rem;
   list-style: none;
@@ -259,4 +260,4 @@ h1 {
     opacity: 1;
     transform: translateY(0);
   }
-} */
+}
