--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,28 @@ h1 {
   margin-bottom: 1.5rem;
 }
 
+.meal-item-counter {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1rem;
+  margin: none;
+}
+.meal-item-counter button {
+  cursor: pointer;
+  font-size: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  border: none;
+  background-color: #ffc404;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .cart h2 {
   margin: 1rem 0;
 }
